2004-10-05  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Handle NULL values from GConf (patch from Colin Walters).

2004-09-30  Leonid Kanter <leon@asplinux.ru>

	* configure.in: Added Russian "ru" to ALL_LINGUAS

2004-09-28  Ross Burton  <ross@burtonini.com>

	* src/cd-drive.c:
	Fix HAL compile, apparently. Thanks to Sjoerd Simons
	<sjoerd@spring.luon.net>.
	
	* src/Makefile.am:
	* tests/Makefile.am:
	Actually add the HAL flags to the build.  First Colin and then
	Sjoerd sent me this patch so I guess I should apply it...

2004-09-28  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Version 0.5.13.

2004-09-27  Ross Burton  <ross@burtonini.com>

	* configure.in:
	HAL blurb.
	
2004-09-27  Ross Burton  <ross@burtonini.com>

	* src/sj-genres.c:
	Yet more aliases.

2004-09-24  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c
	Don't call g_strstrip on NULL (Colin Walters)

2004-09-24  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Detect and enable HAL, based on a patch from Colin Walters.

2004-09-21  Ross Burton  <ross@burtonini.com>

	* src/bacon-cd-selection.c:
	* src/cd-drive.c:
	* src/cd-drive.h:
	* src/dvd_plus_rw_utils.cpp:
	Updated from NCB.

2004-09-21  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	Use $(GCONFTOOL) instead of gconftool-2.

2004-09-21  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in: 
	* src/sound-juicer.h: 
	* src/sj-metadata-musicbrainz.c:
	Add support for changing the MusicBrainz server using a gconf
	key. Patch from William Jon McCann <mccann@jhu.edu>.

2004-09-21  Ross Burton  <ross@burtonini.com>

	* sound-juicer.spec.in:
	Add a pre-remove handler to remove the gconf schemas (Brent Fox)

2004-09-21  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c (sanitize_path):
	Add more special shell characters (Andy Hanton)

2004-09-19  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "gu" "mk" "pa" "tr" to ALL_LINGUAS.
