@@ -1,5 +1,11 @@
 2004-10-05  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-main.c:
+	Sort the genre list at runtime, handles different locales this
+	way (patch from Christophe Fergeau).
+
+2004-10-05  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-prefs.c:
 	Handle NULL values from GConf (patch from Colin Walters).
 
